k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skyflow
  labels:
    name: skyflow
    app.kubernetes.io/part-of: skyflow
